--- a/transifex.yml
+++ b/transifex.yml
@@ -1,7 +1,7 @@
 git:
   filters:
     - filter_type: file
-      file_format: GITHUBMARKDOWN
+      file_format: MS_DOCX
       source_language: en
-      source_file: '2023/all.en.md'
-      translation_files_expression: '2023/all.<lang>.md'
+      source_file: 'linguistic-general linguistic range_en.docx'
+      translation_files_expression: ''
