--- a/cefr-bo/transifex.yml
+++ b/cefr-bo/transifex.yml
@@ -4,4 +4,4 @@ git:
       file_format: MS-DOCX
       source_language: en
       source_file: cefr-bo
-      translation_files_expression: 'cefr-bo'
+      translation_files_expression: 'cefr-bo/*'
