--- a/cefr-bo/transifex.yml
+++ b/cefr-bo/transifex.yml
@@ -4,5 +4,5 @@ git:
     - filter_type: file
       file_format: docx
       source_language: en
-      source_file: Languages/Tibetan/*.docx
-      translation_files_expression: 'Languages/Tibetan/<lang>.docx'
+      source_file: resources/*.docx
+      translation_files_expression: 'resources/*.docx'
