--- a/.github/workflow/transifex_integration.yml
+++ b/.github/workflow/transifex_integration.yml
@@ -1,19 +1,34 @@
+name: Transifex Integration
 
 on:
-  pull_request:
+  push:
+  branches:
+    - main
     types: [labeled]
 
-name: "Translations Sync"
-
 jobs:
-  push-strings-to-transifex:
+  transifex_integration:
     if: github.event.label.name == 'Ready for translations'
-    - name: "Pull from transifex and commit to the PR"
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install Transifex CLI
+        run: pip install transifex-client
+
+      - name: "Pull from transifex and commit to the PR"
         with: # Or as an environment variable
             tx_token: ${{ secrets.TX_TOKEN }}
             git_flow: true
             github_token: ${{ secrets.GITHUB_TOKEN }}
-            translations_folder: translations/bo
+            translations_folder: config/locale
             pull_translations: true
             pull_sources: true
             commit_to_pr: true
