--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
           
       - name: execute py script 
-        run: python extract.py
+        run: python extract_bo.py
           
       - name: commit files
         run: |
